# postgres-dupe-fixer

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/postgres_dupe_fixer/: __main__.py
